--- a/calendar/config/database.yml
+++ b/calendar/config/database.yml
@@ -17,9 +17,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
+  host: db
   username: postgres
-  password: postgres
+  password: password
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -87,5 +87,5 @@ test:
 production:
   <<: *default
   database: calendar_production
-  username: rails_interview_project_vinicius_goncalves
-  password: <%= ENV["RAILS_INTERVIEW_PROJECT_VINICIUS_GONCALVES_DATABASE_PASSWORD"] %>
+  username: vinicius_goncalves
+  password: <%= ENV["DATABASE_PASSWORD"] %>
